Redesigned the route structure and  updated docs.
